syntax = "proto3";

package grpc;

option go_package = "internal/grpc/proto";

message Metric {
  string id = 1;

  enum Type {
    UNKNOWN = 0;
    GAUGE = 1;
    COUNTER = 2;
  }

  Type type = 2;
  int64 delta = 3;
  double value = 4;
  string hash = 5;
}

message PostMetricRequest{
  Metric metrics = 1;
}

message PostMetricResponse{
  string error = 1;
}

message GetMetricRequest{
  string type = 1;
  string name = 2;
}

message GetMetricResponse{
  Metric metric = 1;
  string error = 2;
}

message GetAllRequest{
}

message GetAllResponse{
  repeated Metric metrics = 1;
}

service MetricsService {
  rpc PostMetric(PostMetricRequest) returns (PostMetricResponse);
  rpc GetMetric(GetMetricRequest) returns (GetMetricResponse);
  rpc GetAll(GetAllRequest) returns (GetAllResponse);
}
